--- a/k8s/web/deployment.yaml
+++ b/k8s/web/deployment.yaml
@@ -17,3 +17,17 @@ spec:
           image: thiagokramer/api-conversao:latest
           ports:
             - containerPort: 80
+
+--- 
+
+apiVersion: v1
+kind: Service
+metadata: 
+  name: api-conversao-service
+spec: 
+  selector: 
+    app: api-conversao
+  ports:
+    - port: 80
+      nodePort: 30000
+  type: NodePort
